Correção encontros ambientais

--- a/index.html
+++ b/index.html
@@ -215,6 +215,12 @@
 
     <div id="resultadoEncontro"></div>
 
+    <div>
+        <div id="encontrosAmbientais" class="card p-3 mb-3"></div><br>
+    </div>
+
+    
+
     <button class="btn btn-outline-secondary" onclick="voltarMenu()">⬅ Voltar</button>
   </div>
 
