--- a/index.html
+++ b/index.html
@@ -5,29 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gerador de Missões - Altaris</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <script type="module">
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
-      import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js";
-
-      const firebaseConfig = {
-        apiKey: "AIzaSyCATBfMk70mJuISZRUD698VZjMv4qTVWew",
-        authDomain: "altares-rpg.firebaseapp.com",
-        projectId: "altares-rpg",
-        storageBucket: "altares-rpg.firebasestorage.app",
-        messagingSenderId: "904700894694",
-        appId: "1:904700894694:web:26f3a7773f61fe91ef8a27"
-       };
-
-      const app = initializeApp(firebaseConfig);
-      window.db = getFirestore(app);
-      // 🔥 Expor no escopo global para scripts externos
-      window.db = db;
-      window.doc = doc;
-      window.getDoc = getDoc;
-      window.setDoc = setDoc;
-    </script>
-
 </head>
 <body class="bg-light p-4">
 
@@ -1064,7 +1041,7 @@
 <script src="functionsOraculo.js"></script>
 <script src="functionsPNJ.js"></script>
 <script src="functionsPJ.js"></script>
-<script src="functionsCampanha.js" type="module"></script>
+<script src="functionsCampanha.js"></script>
 <script>
 
 let mochilaEditIndex = null;
