--- a/index.html
+++ b/index.html
@@ -5,8 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gerador de Missões - Altaris</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <script type="module">
+    // Importe tudo o que você precisa diretamente
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
+    import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js";
+
+    const firebaseConfig = {
+        apiKey: "AIzaSyCATBfMk70mJuISZRUD698VZjMv4qTVWew",
+        authDomain: "altares-rpg.firebaseapp.com",
+        projectId: "altares-rpg",
+        storageBucket: "altares-rpg.firebasestorage.app",
+        messagingSenderId: "904700894694",
+        appId: "1:904700894694:web:26f3a7773f61fe91ef8a27"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    // Mantenha apenas a conexão com o Firestore no objeto global
+    // Use window.firebaseModules para agrupar tudo
+    window.firebaseModules = {
+        db: db,
+        doc: doc,
+        getDoc: getDoc,
+        setDoc: setDoc
+    };
+</script>
+
 </head>
-<body class="bg-light p-4">
+<body class="bg-light p-4" onload="iniciarApp()">
 
 <div class="container">
 
@@ -36,6 +64,7 @@
   <button class="btn btn-success my-2" onclick="abrirCriarPJ()">➕ Criar PJ</button>
 
   <ul id="listaPJs" class="list-group"></ul>
+  <button class="btn btn-dark mt-4" onclick="voltarMenu()">⬅ Voltar</button>
 
 </section>
 
@@ -1014,6 +1043,7 @@
       <div class="modal-body">
         <label for="selectPJ" class="form-label">Escolha um personagem:</label>
         <select id="selectPJ" class="form-select"></select>
+        <ul id="listaPjModal" class="list-group"></ul>
       </div>
 
       <div class="modal-footer">
@@ -1031,6 +1061,8 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="tabelas.js"></script>
+<script src="functionsCampanha-prod.js"></script>
+<!-- <script src="functionsCampanha-dev.js"></script> -->
 <script src="functionsCenas.js"></script>
 <script src="functionsCidades.js"></script>
 <script src="functionsDungeon.js"></script>
@@ -1041,8 +1073,9 @@
 <script src="functionsOraculo.js"></script>
 <script src="functionsPNJ.js"></script>
 <script src="functionsPJ.js"></script>
-<script src="functionsCampanha.js"></script>
+
 <script>
+
 
 let mochilaEditIndex = null;
 let mochilaTemp = [];    
@@ -1186,30 +1219,8 @@ function stripHtml(html) {
   return tmp.textContent || tmp.innerText || "";
 }
 
-
-
-
 function salvarMissoes() { salvarCampanhas(); }
 function salvarRumores() { salvarCampanhas(); }
-
-// Inicializar ao abrir a página
-atualizarListaRumores();
-
-atualizarListasMissoes();
-
-atualizarListaCidades();
-
-atualizarListaDungeons();
-
-atualizarListaCenas();
-
-atualizarListaPI();
-
-atualizarTabelasOraculo();
-
-atualizarCenaAtual();
-
-atualizarPJs();
 
 </script>
 </html>
