--- a/index.html
+++ b/index.html
@@ -638,6 +638,9 @@
         </form>
       </div>
 
+      <input type="hidden" id="experiencia" name="experiencia" >
+      <input type="hidden" id="riquesas" name="riquesas" >
+
       <div class="modal-footer">
         <button class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
         <button id="salvarPjBtn" class="btn btn-primary">Salvar</button>
