Melhorias na criação de missões

--- a/index.html
+++ b/index.html
@@ -1901,6 +1901,7 @@
 <script src="tabelasAventuras.js"></script>
 <script src="tabelasGeracaoTerreno.js"></script>
 <script src="tabelasCidades.js"></script>
+<script src="tabelasMissoes.js"></script>
 <script src="functionsCampanha-prod.js"></script>
 <script src="functionsFerramentas.js"></script>
 <script src="functionsMapa.js"></script>
